--- a/templates/ProveedorEmpleado.html
+++ b/templates/ProveedorEmpleado.html
@@ -1,41 +1,14 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.84.0">
-    <title>Pagina XPENNG</title>
 
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"> </script>
-    <script src="{{ url_for('static', filename='js/dashboard.js') }}"> </script>
-    <script src="{{ url_for('static', filename='js/sesion.js') }}"> </script>
+{% block title %}
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}" type="text/css">
+<title>PROVEEDOR-XPENNG</title>
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>  
-    
-  </head>
+{% endblock %}
 
 
+{% extends 'base.html' %}
 
-  <body>
+{% block contenido %}
     
 <header class="navbar navbar-dark sticky-top  bg-primary flex-md-nowrap p-0 shadow ">
   <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 bg-primary" href="/Dashboard">DASHBOARD-XPENNG</a>
@@ -168,5 +141,4 @@
   </div>
 </div>
 
-  </body>
-</html>
+{% endblock %}
