--- a/templates/UsuarioAdmin.html
+++ b/templates/UsuarioAdmin.html
@@ -1,41 +1,14 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.84.0">
-    <title>Pagina XPENNG</title>
 
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"> </script>
-    <script src="{{ url_for('static', filename='js/dashboard.js') }}"> </script>
-    <script src="{{ url_for('static', filename='js/sesion.js') }}"> </script>
+{% block title %}
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}" type="text/css">
+<title>USUARIO-XPENNG</title>
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>  
-    
-  </head>
+{% endblock %}
 
 
+{% extends 'base.html' %}
 
-  <body>
+{% block contenido %}
     
 <header class="navbar navbar-dark sticky-top  bg-primary flex-md-nowrap p-0 shadow ">
   <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 bg-primary" href="/Dashboard">DASHBOARD-XPENNG</a>
@@ -123,42 +96,47 @@
       
       
       
-      <div class="table-responsive">
- 
-        <form class="d-flex">
-          <input class="form-control me-sm-2" type="text" placeholder="Buscar">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
-        </form>
-
-
         <br>
     
 
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th class="table-primary" scope="col">Id</th>
-              <th class="table-primary" scope="col">Nombre</th>
-              <th class="table-primary"  scope="col">Contraseña</th>
-              <th class="table-primary"  scope="col">Rol</th>  
-              <th class="table-primary"  scope="col">Editar</th>  
-              <th class="table-primary" scope="col">Eliminar</th>              
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="table-active">
-              <th  scope="row">001</th>
-              <td >Gabriel Betin</td>
-              <td >Gabo123</td>
-              <td >Programador</td>
-              <td href="#"> <a href="" onclick="editarUsuario()">Editar</a>   </td>
-              <td href="#"> <a href="#">Eliminar</a>   </td>
-            </tr>
-                 
-                   
-          
-          </tbody>
-        </table>    
+        <div class="table-responsive">
+ 
+          <form class="d-flex" action="{{ url_for('consulta_admin') }}" method="post" onsubmit="">
+            <input class="form-control me-sm-2" type="text" placeholder="Buscar" name="usuario" id="usuario">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
+          </form>      
+  
+          <br>
+      
+  
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th class="table-primary" scope="col">Id</th>
+                <th class="table-primary" scope="col">Nombre</th>
+                <th class="table-primary"  scope="col">Contraseña</th>
+                <th class="table-primary"  scope="col">Rol</th>  
+                <th class="table-primary"  scope="col">Editar</th>  
+                <th class="table-primary" scope="col">Eliminar</th>              
+              </tr>
+            </thead>
+  
+  
+            <tbody>
+              <tr class="table-active"></tr>
+                {% for usu in usuarios %}
+                
+                  <th  scope="row">{% print(usu[0]) %}</th>
+                  <td >{% print(usu[1]) %}</td>
+                  <td >{% print(usu[2]) %}</td>
+                  <td >{% print(usu[3]) %}</td>
+                  <td > <a href="#" onclick="editarUsuario()">Editar</a>   </td>
+                  <td > <a href="#" onclick="eliminarUsuario()">Eliminar</a>   </td>
+                </tr>
+                {% endfor %}                   
+            
+            </tbody>
+          </table>    
     
     </center>
 
@@ -168,6 +146,4 @@
 </div>
 
 
-
-  </body>
-</html>
+{% endblock %}
