--- a/templates/eliminarUsuario.html
+++ b/templates/eliminarUsuario.html
@@ -19,21 +19,14 @@
                     <div class="card shadow-lg border-0 rounded-lg mt-5">
                         <div class="card-header"><h3 class="text-center font-weight-light my-4">XPENNG</h3></div>
                         <div class="card-body">
-                            <form  name="formEdit"  action="{{ url_for('editar_usuario') }}"  method="post" onsubmit="" >
+                            <form  name="formEdit"  action="{{ url_for('eliminar_usuario') }}"  method="post" onsubmit="" >
                                 <div class="form-floating mb-3">
                                     <input class="form-control" id="usuario" type="text" name="usuario" id="usuario" />
-                                    <label for="inputEmail">Nombre</label>
+                                    <label for="inputEmail">Digite el usuario</label>
                                 </div>
-                                <div class="form-floating mb-3">
-                                    <input class="form-control" id="contraseña" type="password" name="password" id="password" />
-                                    <label for="inputPassword">Contraseña</label>
-                                </div>
-                                <div class="form-floating mb-3">
-                                    <input class="form-control" id="contraseña" type="password" name="rol"  id="rol" />
-                                    <label for="inputPassword">Rol</label>
-                                </div>
+                               
                                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0"> 
-                                    <input class="btn btn-primary btn-user btn-block" type="submit" value="Editar">                                           
+                                    <input class="btn btn-primary btn-user btn-block" type="submit" value="Eliminar">                                           
                                    </div>   
                                                                     
 
