--- a/templates/eliminarUsuario.html
+++ b/templates/eliminarUsuario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Usuario</title>
+    <title>Eliminar Usuario</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
 
@@ -19,9 +19,9 @@
                     <div class="card shadow-lg border-0 rounded-lg mt-5">
                         <div class="card-header"><h3 class="text-center font-weight-light my-4">XPENNG</h3></div>
                         <div class="card-body">
-                            <form  name="formEdit"  action="{{ url_for('eliminar_usuario') }}"  method="post" onsubmit="" >
+                            <form  name="formEliminar"  action="{{ url_for('eliminar_usuario' , nom_usuario=usuarios[0][1]) }}"  method="post" onsubmit="" >
                                 <div class="form-floating mb-3">
-                                    <input class="form-control" id="usuario" type="text" name="usuario" id="usuario" />
+                                    <input class="form-control" id="usuario" type="text" name="usuario" id="usuario" value= "{{usuarios[0][1]}}" />
                                     <label for="inputEmail">Digite el usuario</label>
                                 </div>
                                
