--- a/templates/UsuarioAdmin.html
+++ b/templates/UsuarioAdmin.html
@@ -105,6 +105,25 @@
             <input class="form-control me-sm-2" type="text" placeholder="Buscar" name="usuario" id="usuario">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
           </form>      
+
+
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <ul class=flashes>
+                        {% for message in messages %}
+
+                        <script>
+                            window.alert('{{ message }}')                                                        
+                        </script>
+                          
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
+
+
+
+
   
           <br>
       
@@ -122,7 +141,7 @@
             </thead>
   
   
-            <tbody>
+            <tbody>s
               <tr class="table-active"></tr>
                 {% for usu in usuarios %}
                 
@@ -130,8 +149,8 @@
                   <td >{% print(usu[1]) %}</td>
                   <td >{% print(usu[2]) %}</td>
                   <td >{% print(usu[3]) %}</td>
-                  <td > <a href="#" onclick="editarUsuario()">Editar</a>   </td>
-                  <td > <a href="#" onclick="eliminarUsuario()">Eliminar</a>   </td>
+                  <td > <a href="#" onclick="editarUsuario('{{usu[1]}}')">Editar</a>   </td>
+                  <td > <a href="#" onclick="eliminarUsuario('{{usu[1]}}')">Eliminar</a>   </td>
                 </tr>
                 {% endfor %}                   
             
