--- a/templates/ProductoAdmin.html
+++ b/templates/ProductoAdmin.html
@@ -94,66 +94,90 @@
         <img src="{{ url_for('static', filename='img/productos.jpg') }}"  width="300" alt="Aqui va una imagen">  
         
         
-  
+        <form  name="formRegister"  action="{{ url_for('producto_admin') }}"  method="post" onsubmit=""> 
   
         
           <div class="row">
   
             <div class="col" > 
-              <input class="form-control me-sm-2" type="text" placeholder="Codigo">
+              <input class="form-control me-sm-2" type="text" placeholder="Codigo"  name="codigo" id="codigo">
               <br>
-              <input class="form-control me-sm-2" type="text" placeholder="Cantidad Minima requerida">
+              <input class="form-control me-sm-2" type="text" placeholder="Cantidad Minima requerida" name="cant_minima" id="cant_minima">
               
             </div>
   
             <div class="col">
               
-              <input class="form-control me-sm-2" type="text" placeholder="Nombre"> 
+              <input class="form-control me-sm-2" type="text" placeholder="Nombre" name="nombre" id="nombre" > 
               <br>
-              <input class="form-control me-sm-2" type="text" placeholder="Stock"> 
+              <input class="form-control me-sm-2" type="text" placeholder="Stock" name="stock" id="stock"> 
             </div>
   
             <div class="col">
               
-              <input class="form-control me-sm-2" type="text" placeholder="Descripción"> 
+              <input class="form-control me-sm-2" type="text" placeholder="Descripción" name="descripcion" id="descripcion"> 
               <br>
-              <input class="form-control me-sm-2" type="text" placeholder="Proveedor">         
+              <input class="form-control me-sm-2" type="text" placeholder="Proveedor" name="proveedor" id="proveedor">         
             </div>
   
             <div class="col">
              <br>
               <button class="btn btn-secondary my-2 my-sm-0 form-control me-sm-2" type="submit">Crear</button>
             </div>
+            
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <ul class=flashes>
+                                {% for message in messages %}
+
+                                <script>
+                                    window.alert('{{ message }}')                                                        
+                                </script>
+                                  
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% endwith %}
   
+             </form>
           </div>
         
   
   
           <br>
   
+
+
   	
           <div class="row">
 
-            <form class="d-flex">
+            <form class="d-flex" action="{{ url_for('consulta_producto_admin') }}" method="post" onsubmit="" name = "formularioProductos">
 
             <div class="col-sm-9">
 
-                 <input class="form-control me-sm-2" type="text" placeholder="Buscar productos">
+                 <input class="form-control me-sm-2" type="text" placeholder="Buscar productos" name="producto" id="producto">
                                
             </div>
 
             <div class="col-sm">                   
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>                
+              <button class="btn btn-secondary my-2 my-sm-0" type="submit" >Buscar</button>                
            </div>
               
             <div class="col-sm"> 
                               
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"> 
+                <input class="form-check-input" type="checkbox" value="minima" id="flexCheckDefault" name="minima"> 
                 <label class="form-check-label" for="flexCheckDefault">
                    Cantidad Minima
                  </label>
 
+                 
+                 
+
              </div> 
+
+
+
+     
 
             </form>
           </div>   
@@ -169,6 +193,7 @@
             
   
           <table class="table table-hover">
+
             <thead>
               <tr>
                 <th class="table-primary" scope="col">Id</th>
@@ -182,18 +207,23 @@
                 <th class="table-primary" scope="col">Eliminar</th>              
               </tr>
             </thead>
+
             <tbody>
               <tr class="table-active">
-                <th  scope="row">001</th>
-                <td >Tax001</td>
-                <td >Taxi</td>
-                <td >Servicio Publico</td>
-                <td >10</td>
-                <td >15</td>
-                <td >Taxis a la venta</td>                
-                <td href="#"> <a href="" onclick="editarProducto()">Editar</a>   </td>
-                <td href="#"> <a href="#">Eliminar</a>   </td>
+              {% for pro in productos %}   
+              
+                <th  scope="row">{% print(pro[0]) %}</th>
+                <td >{% print(pro[1]) %}</td>
+                <td >{% print(pro[2]) %}</td>
+                <td >{% print(pro[3]) %}</td>
+                <td >{% print(pro[4]) %}</td>  
+                <td >{% print(pro[5]) %}</td>
+                <td >{% print(pro[6]) %}</td>
+                <td > <a href="#" onclick="editarProducto('{{pro[2]}}')">Editar</a>   </td>
+                <td > <a href="#" onclick="eliminarProducto('{{pro[2]}}')">Eliminar</a>   </td>
               </tr>
+              {% endfor %}                   
+              
   
                      
             
