--- a/templates/UsuarioAdmin.html
+++ b/templates/UsuarioAdmin.html
@@ -133,7 +133,7 @@
               <tr>
                 <th class="table-primary" scope="col">Id</th>
                 <th class="table-primary" scope="col">Nombre</th>
-                <th class="table-primary"  scope="col">Contraseña</th>
+                <th class="table-primary"  scope="col">Email</th>
                 <th class="table-primary"  scope="col">Rol</th>  
                 <th class="table-primary"  scope="col">Editar</th>  
                 <th class="table-primary" scope="col">Eliminar</th>              
@@ -141,13 +141,13 @@
             </thead>
   
   
-            <tbody>s
+            <tbody>
               <tr class="table-active"></tr>
                 {% for usu in usuarios %}
                 
                   <th  scope="row">{% print(usu[0]) %}</th>
                   <td >{% print(usu[1]) %}</td>
-                  <td >{% print(usu[2]) %}</td>
+                  <td >{% print(usu[4]) %}</td>
                   <td >{% print(usu[3]) %}</td>
                   <td > <a href="#" onclick="editarUsuario('{{usu[1]}}')">Editar</a>   </td>
                   <td > <a href="#" onclick="eliminarUsuario('{{usu[1]}}')">Eliminar</a>   </td>
